--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ version = "0.1.1"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0.196", features = ["derive"], optional = true }
+serde = { version = "1.0.196", features = [
+    "derive",
+    "alloc",
+], default-features = false, optional = true }
 
 [features]
 serde = ["dep:serde"]
